# automated_market_research

./: .gitignore  README.md  dependencies.txt  pyproject.toml
output/: market_research_report.md
src/automated_market_research/: crew.py  main.py
src/automated_market_research/config/: agents.yaml  tasks.yaml
